--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -174,7 +174,7 @@
     }
 
     &-icons {
-        width: 50%;
+        width: 65%;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
