--- a/src/components/HeroImage/HeroImage.scss
+++ b/src/components/HeroImage/HeroImage.scss
@@ -9,6 +9,7 @@
     background: linear-gradient(0deg,rgba(80, 98, 73, 0.65),rgba(80, 98, 73, 0.65)), url('../../assets/Images/electric-car-power-charging\ \(1\).jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
     max-width: 100vw;
 
     @include tablet-breakpoint {
@@ -45,10 +46,14 @@
     }
 
     &-textline {
-        font-size: 1rem;
+        font-size: 0.75rem;
         color: white;
         line-height: normal;
         min-width: 11.5rem;
+
+        @include tablet-breakpoint {
+            font-size: 1rem;
+        }
 
         @include desktop-breakpoint {
             font-size: 1.5rem;
@@ -56,11 +61,11 @@
     }
 
     &-tagtext {
-        font-size: 2rem;
+        font-size: 1.75rem;
         color: white;
         line-height: 100%;
-        min-width: 22.25rem;
-        max-width: 22.25rem;
+        min-width: 16rem;
+        max-width: 20rem;
 
         @include tablet-breakpoint {
             font-size: 3.75rem;
@@ -76,15 +81,16 @@
     }
 
     &-text {
-        font-size: 1rem;
+        font-size: 0.75rem;
         color: white;
         line-height: normal;
-        min-width: 26rem;
-        max-width: 26rem;
+        min-width: 17rem;
+        max-width: 20rem;
 
         @include tablet-breakpoint {
             min-width: 32rem;
             max-width: 32rem;
+            font-size: 1rem;
         }
 
         @include desktop-breakpoint {
