--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -4,7 +4,7 @@
 @import "../../styles/variables";
 
 .greene__logo {
-    width: 25%;
+    width: 30%;
     height: 1.5rem;
     flex-shrink: 0;
     font-size: 1.25rem;
