--- a/src/pages/Authentication/Authentication.scss
+++ b/src/pages/Authentication/Authentication.scss
@@ -105,7 +105,7 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
-        font-size: 1rem;
+        font-size: 0.95rem;
 
         @include desktop-breakpoint {
             font-size: 1.75rem;
