--- a/src/pages/Register/Register.scss
+++ b/src/pages/Register/Register.scss
@@ -89,6 +89,11 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
+        font-size: 1rem;
+
+        @include tablet-breakpoint {
+            font-size: 1.25rem;
+        }
     }
 
     &-text {
